fixed media queries and spacing

--- a/app/sections/AboutPage/About.css
+++ b/app/sections/AboutPage/About.css
@@ -1,5 +1,6 @@
 .about-group {
     gap: 2rem;
+    padding-top:10rem;
 }
 
 /* === media queries === */
